turmites.lessons.turmites.helloturmite.HelloTurmite.scala.error
Turmite:30: error: ')' expected but '(' found.
    case (rule(state)(couleurActuelle)(1) == STOP)    => droite() ; gauche() //ne rien faire
                     ^Turmite:30: error: '=>' expected but '(' found.
    case (rule(state)(couleurActuelle)(1) == STOP)    => droite() ; gauche() //ne rien faire
                                      ^